Changes until now

--- a/Code/src/config.conf
+++ b/Code/src/config.conf
@@ -23,7 +23,14 @@ distance_dict = {
         "cm8x8":${distances}[2],
         "all":${distances}[2]
     }
+image_path_dir =input_images/
+image_feature_dir =image_features/
+default_feature=all
 
 [Phase2]
+lda_dir=dim_red/lda/
+pca=dim_red/pca/
+svd=dim_red/svd/
+kmeans=dim_red/kmeans/
 
 [Phase3]
