--- a/Code/src/config.conf
+++ b/Code/src/config.conf
@@ -29,8 +29,8 @@ default_feature=all
 
 [Phase2]
 lda_dir=dim_red/lda/
-pca=dim_red/pca/
-svd=dim_red/svd/
-kmeans=dim_red/kmeans/
-
+pca_dir=dim_red/pca/
+svd_dir=dim_red/svd/
+kmeans_dir=dim_red/kmeans/
+similarity_dir=similarity/
 [Phase3]
