elbp config added

--- a/Code/src/config.conf
+++ b/Code/src/config.conf
@@ -12,6 +12,7 @@ hog_dict={
         "l2_thres": 0.2,
         "norm_type": "L2-Hys"
     }
+elbp_dict={"neighbours":8, "radius":1}
 distances=["euclidean", "cosine", "manhattan","earth_movers"]
 distance_dict = {
         "img":${distances}[2],
