--- a/environment.yml
+++ b/environment.yml
@@ -2,86 +2,22 @@ name: mwdb
 channels:
   - defaults
 dependencies:
-  - blas=1.0=mkl
-  - blosc=1.21.0=h19a0ad4_0
-  - brotli=1.0.9=ha925a31_2
-  - bzip2=1.0.8=he774522_0
-  - ca-certificates=2021.7.5=haa95532_1
-  - certifi=2021.5.30=py39haa95532_0
-  - cfitsio=3.470=he774522_6
-  - charls=2.2.0=h6c2663c_0
-  - cloudpickle=2.0.0=pyhd3eb1b0_0
-  - cycler=0.10.0=py39haa95532_0
-  - cytoolz=0.11.0=py39h2bbff1b_0
-  - dask-core=2021.8.1=pyhd3eb1b0_0
-  - fonttools=4.25.0=pyhd3eb1b0_0
-  - freetype=2.10.4=hd328e21_0
-  - fsspec=2021.8.1=pyhd3eb1b0_0
-  - giflib=5.2.1=h62dcd97_0
-  - icc_rt=2019.0.0=h0cc432a_1
-  - icu=58.2=ha925a31_3
-  - imagecodecs=2021.6.8=py39h5da4933_0
-  - imageio=2.9.0=pyhd3eb1b0_0
-  - intel-openmp=2021.3.0=haa95532_3372
-  - jpeg=9d=h2bbff1b_0
-  - kiwisolver=1.3.1=py39hd77b12b_0
-  - lcms2=2.12=h83e58a3_0
-  - lerc=2.2.1=hd77b12b_0
-  - libaec=1.0.4=h33f27b4_1
-  - libdeflate=1.7=h2bbff1b_5
-  - libpng=1.6.37=h2a8f88b_0
-  - libtiff=4.2.0=hd0e1b90_0
-  - libzopfli=1.0.3=ha925a31_0
-  - locket=0.2.1=py39haa95532_1
-  - lz4-c=1.9.3=h2bbff1b_1
-  - matplotlib=3.4.2=py39haa95532_0
-  - matplotlib-base=3.4.2=py39h49ac443_0
-  - mkl=2021.3.0=haa95532_524
-  - mkl-service=2.4.0=py39h2bbff1b_0
-  - mkl_fft=1.3.0=py39h277e83a_2
-  - mkl_random=1.2.2=py39hf11a4ad_0
-  - munkres=1.1.4=py_0
-  - networkx=2.6.2=pyhd3eb1b0_0
-  - numpy-base=1.20.3=py39hc2deb75_0
-  - olefile=0.46=pyhd3eb1b0_0
-  - openjpeg=2.4.0=h4fc8c34_0
-  - openssl=1.1.1l=h2bbff1b_0
-  - packaging=21.0=pyhd3eb1b0_0
-  - partd=1.2.0=pyhd3eb1b0_0
-  - pillow=8.3.1=py39h4fa10fc_0
-  - pip=21.2.4=py38haa95532_0
-  - pyparsing=2.4.7=pyhd3eb1b0_0
-  - pyqt=5.9.2=py39hd77b12b_6
-  - python=3.9.7=h6244533_1
-  - python-dateutil=2.8.2=pyhd3eb1b0_0
-  - pywavelets=1.1.1=py39h080aedc_4
-  - pyyaml=5.4.1=py39h2bbff1b_1
-  - qt=5.9.7=vc14h73c81de_0
-  - scikit-image=0.18.1=py39hf11a4ad_0
-  - scipy=1.7.1=py39hbe87c03_2
-  - setuptools=58.0.4=py39haa95532_0
-  - sip=4.19.13=py39hd77b12b_0
-  - six=1.16.0=pyhd3eb1b0_0
-  - snappy=1.1.8=h33f27b4_0
-  - sqlite=3.36.0=h2bbff1b_0
-  - tifffile=2021.7.2=pyhd3eb1b0_2
-  - tk=8.6.11=h2bbff1b_0
-  - toolz=0.11.1=pyhd3eb1b0_0
-  - tornado=6.1=py39h2bbff1b_0
-  - tzdata=2021a=h5d7bf9c_0
-  - vc=14.2=h21ff451_1
-  - vs2015_runtime=14.27.29016=h5e58377_2
-  - wheel=0.37.0=pyhd3eb1b0_1
-  - wincertstore=0.2=py39haa95532_2
-  - xz=5.2.5=h62dcd97_0
-  - yaml=0.2.5=he774522_0
-  - zfp=0.5.5=hd77b12b_6
-  - zlib=1.2.11=h62dcd97_4
-  - zstd=1.4.9=h19a0ad4_0
+  - bzip2==1.0.8
+  - ca-certificates==2021.7.5
+  - certifi==2021.5.30
+  - cytoolz==0.11.0
+  - matplotlib==3.4.2
+  - numpy-base==1.20.3
+  - pillow==8.3.1
+  - pip==21.2.4
+  - python>=3.9.7
+  - python-dateutil==2.8.2
+  - scikit-image==0.18.1
+  - scipy==1.7.1
+  - setuptools==58.0.4
+  - pandas
   - pip:
-    - faiss-cpu==1.7.1.post2
     - joblib==1.0.1
     - numpy==1.21.2
     - scikit-learn==1.0
     - threadpoolctl==3.0.0
-prefix: C:\Users\Krima\.conda\envs\mwdb
